# eueno-smartcontract

./: .dockerignore  .gitignore  Cargo.toml  README.md
admin-node/: .env.sample  config.json  constants.js  example.js  index.js  package.json  tsconfig.json
admin-node/__tests__/: integration.ts
admin-node/porep_app/: index.d.ts  index.js
admin-node/schema/: execute_msg.json  query_msg.json
admin-node/src/: addresses.json  set_verifier_params.js  verify.js
admin-node/tests/: integration.spec.ts
contract/: .gitignore  Cargo.toml  config.ts  package.json  tsconfig.json
contract-auxiliaries/: Cargo.toml
contract-auxiliaries/src/: deserializer.rs  lib.rs  utils.rs
contract-auxiliaries/src/domain/: mod.rs
contract-auxiliaries/src/drg/stacked/: challenges.rs  mod.rs  params.rs  verifier.rs  verifier_params.rs
contract/script/: deploy.ts  setUp.ts  test.txt  verify.ts
contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  test.rs
converter/: Cargo.toml
converter/src/: serializer.rs
dockerfiles/cuda/: Dockerfile
dockerfiles/opencl/: Dockerfile
porep_app/: Cargo.toml  README.md  index.d.ts  index.js  package.json  submitProofTest.js  test.js  test.txt  testMasterNode.js  testProver.js  testQuery.js
porep_app/orai/: index.js
porep_app/src/: lib.rs
prover-node/: .env.sample  .gitignore  constants.js  example.js  file_2kiB.txt  index.js  package-lock.json  package.json
prover-node/src/: verify.js
seal/: Cargo.toml
seal/src/: caches.rs  commitment_reader.rs  constants.rs  file_processor.rs  lib.rs  parameters.rs  pieces.rs  test.rs  util.rs
seal/src/types/: byte_amounts.rs  mod.rs  piece_info.rs  porep_config.rs  sector_size.rs
