[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"

contract-auxiliaries = {path = "../contract-auxiliaries"}
thiserror = { version = "1.0.23" }
sha2 = "0.10.2"
sha3 = "0.10.6"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
arkworks-native-gadgets = { version = "=1.0.0", default-features = false }

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
default = ["opencl"]
cuda = ["proofs-core/cuda", "proofs-porep/cuda", "bellperson/cuda"]
opencl = ["proofs-core/opencl", "proofs-porep/opencl", "bellperson/opencl"]


[dev-dependencies]
proofs-core = { path = "../proofs-core", default-features = false }
proofs-porep = { path = "../proofs-porep" }
seal = { path = "../seal" }
converter = { path = "../converter" }
contract-auxiliaries = { path = "../contract-auxiliaries" }
sha2raw = { path = "../sha2raw" }
hashers = { path = "../hashers", default-features = false, features = [
    "poseidon",
    "sha256",
] }
bellperson = "0.24.0"
ff = "0.12.0"
merkletree = "0.22.0"
fr32 = { path = "../fr32" }
blstrs = "0.6.0"
generic-array = "0.14.4"
rand = "0.8"
rand_xorshift = "0.3.0"
tempfile = "3"
serde_json = "1.0.59"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}

