[package]
name = "porep_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-bindgen = { version = "5.1.0" }
ark-serialize = { version = "^0.3.0", default-features = false }
proofs-core = { path = "../proofs-core", default-features = false }
proofs-porep = { path = "../proofs-porep" }
seal = { path = "../seal" }
converter = { path = "../converter" }
contract-auxiliaries = { path = "../contract-auxiliaries" }
sha2raw = { path = "../sha2raw" }
hashers = { path = "../hashers", default-features = false, features = [
    "poseidon",
    "sha256",
] }
bellperson = "0.24.0"
ff = "0.12.0"
merkletree = "0.22.0"
fr32 = { path = "../fr32" }
blstrs = "0.6.0"
generic-array = "0.14.4"
rand = "0.8"
rand_xorshift = "0.3.0"
tempfile = "3"
serde_json = "1.0.59"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"]}

[features]
default = ["opencl"]
cuda = ["proofs-core/cuda", "proofs-porep/cuda", "bellperson/cuda"]
opencl = ["proofs-core/opencl", "proofs-porep/opencl", "bellperson/opencl"]


[build-dependencies]
node-bindgen = { version = "5.1.0", default-features = false, features = ["build"] }