[package]
name = "seal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proofs-core = { path = "../proofs-core", default-features = false }
proofs-porep = { path = "../proofs-porep", default-features = false }
hashers = { path = "../hashers", default-features = false, features = [
    "poseidon",
    "sha256",
] }
rand = "0.8"
lazy_static = "1.2"
memmap2 = "0.5.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
blake2b_simd = "1.0.0"
bellperson = "0.24.0"
log = "0.4.7"
rayon = "1.1.0"
hex = "0.4.0"
merkletree = "0.22.0"
bincode = "1.1.2"
anyhow = "1.0.23"
sha2 = "0.10.2"
typenum = "1.11.2"
gperftools = { version = "0.2", optional = true }
generic-array = "0.14.4"
fr32 = { path = "../fr32", default-features = false }
converter = {path = "../converter"}
once_cell = "1.8.0"
blstrs = "0.6.0"
tempfile = "3"

[dev-dependencies]
criterion = "0.3"
ff = "0.12.0"
fil_logger = "0.1.6"
rand_xorshift = "0.3.0"
walkdir = "2.3.2"
